--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "preview": "vite preview",
     "build-only": "vite build",
     "type-check": "vue-tsc --build --force",
-    "lint": "eslint . --fix"
+    "lint": "eslint . --fix",
+    "deploy": "node deploy.js"
   },
   "dependencies": {
     "animate.css": "^4.1.1",
     "bootstrap-icons": "^1.11.3",
+    "swiper": "^11.1.15",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5"
   },
@@ -26,6 +28,7 @@
     "autoprefixer": "^10.4.20",
     "eslint": "^9.14.0",
     "eslint-plugin-vue": "^9.30.0",
+    "gh-pages": "^6.2.0",
     "npm-run-all2": "^7.0.1",
     "postcss": "^8.4.49",
     "scss": "^0.2.4",
