--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,8 @@ on:
   # 有加這行可以手動觸發actions
   workflow_dispatch:
 
+permissions:
+  contents: write
 # 觸發內容
 jobs:
   # 這個workflow有個job叫做build
@@ -31,7 +33,7 @@ jobs:
       # 2. deploy
       - name: Deploy
         # 別人的actions拿來借用
-        uses: JamesIves/github-pages-deploy-action@releases/v4.6.9
+        uses: JamesIves/github-pages-deploy-action@releases/v4
         with:
           token: ${{ secrets.ACCESS_TOKEN }} # Settings > Secret 建立的 ACCESS_TOKEN，推同個 repo 的話可以不需要
           BRANCH: gh-pages # deploy 到 gh-pages 這個分支
