--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,14 +11,13 @@ on:
   # 有加這行可以手動觸發actions
   workflow_dispatch:
 
-permissions:
-  contents: write
 # 觸發內容
 jobs:
   # 這個workflow有個job叫做build
   build:
     # 這個job要run在ubuntu上
     runs-on: ubuntu-latest
+    permissions: write
 
     # job的步驟要做些什麼咧
     steps:
@@ -35,6 +34,7 @@ jobs:
         # 別人的actions拿來借用
         uses: JamesIves/github-pages-deploy-action@releases/v4
         with:
-          token: ${{ secrets.ACCESS_TOKEN }} # Settings > Secret 建立的 ACCESS_TOKEN，推同個 repo 的話可以不需要
           BRANCH: gh-pages # deploy 到 gh-pages 這個分支
           FOLDER: dist # build 後的資料夾
+        env:
+          GITHUB_TOKEN: ${{ secret.ACCESS_TOKEN }}
